package dk.sdu.mmmi.common.services.Map;

import dk.sdu.mmmi.common.data.World;

public interface IMapGenerator {

    void generateMap(World world);
}
