@startuml
component Common {
    package Common {

        package services {
            interface IActor {
                speed
                move()
                placeWeapon(IWeapon)
            }

            interface IWeapon {
                getDamagePoints()
                setDamagePoints()
            }

            interface ICollidable {
                getCollidable()
                setCollidable()
            }

            interface IDamageable {
                getHitPoints()
                setHitPoints()
            }

            interface IGamePluginService {
                start()
                stop()
            }
            interface IMap {
                getWidth()
                getHeight()
                }

            interface IEntityProcessingService {
                process()
            }

            interface IPostEntityProcessingService {
                postProcess()
            }

            interface IMapGenerator {
                generateMap(World)
            }
        }

        package data {
            class World {
                entities
                map
                addEntity()
                removeEntity()
                getEntity()
                getMap()
            }


            class Entity {
                coordinates
                direction

                getCoordinates()
                setCoordinates(coordinates)
                getDirection()
                setDirection(direction)
            }
            class Map {
                - width: int
                - height: int
                - map: Grid
                + getMap(): Grid
                + setMap(Grid)
                + updateTile(coord, value)
                + isMoveAllowed(Entity, newCoordinates): boolean
                - isTileOccupied(coord): boolean
                }


        }
    }
    note left of Map: Grid is a map of coordinates and booleans to represent obstacles


'	component Parts {
'		interface EntityPart {
'			process()
'		}
'
'		class LifePart implements EntityPart {
'		}
'
'		class MovingPart implements EntityPart {
'		}
'
'		class PositionPart implements EntityPart {
'		}
'
'	}
}
component Weapon {
    package WeaponSystem {
        class Weapon implements Common.Common.services.IWeapon{
            - timeOfPlacement: float
            - timeTillExplosion: float
            - damagePoints: int
            - blastLength: int
            + calculateTimeTillExplosion(): float
            + calculateBlastArea(): Collection<Coordinates>
        }
        Weapon --|> Entity : inherits

        class WeaponExplosionSystem implements Common.Common.services.IEntityProcessingService {
            - world: World
            + WeaponExplosionSystem(World)
            + calculateBlastArea(Weapon, World)
            + process()
        }
    }
}

component Enemy {
    class enemyControlSystem{
        placeBomb()
        move()
    }
    component AI{
    'maybe an interface
        class PathFinding{
            calculatePathToPlayer(Player)
        }

        class BombPlacing {
            calculateOptimalPlacement(Entity, Weapon))
        }
    }

    class EnemyCollisionControlSystem{
        XCord  'maybe?
        YCord  'maybe?
    }
}

component Player {
    class Player {
    }

    class PlayerControlSystem {
    - IWeapon[] placeableWeapons
    + placeWeapon()
    + takeDamage()
    + process()
    }

    class PlayerPlugin {
    - Entity playerEntity
    + createPlayer()
    + start()
    + stop()
    }

    Common.Common.services.IActor <|.. Player.PlayerControlSystem
    Common.Common.services.IDamageable <|.. Player.PlayerControlSystem
    Common.Common.data.Entity <|-- Player.Player
    Common.Common.services.IEntityProcessingService <|.. Player.PlayerControlSystem
    Common.Common.services.IGamePluginService <|.. Player.PlayerPlugin
}

component MapGenerator {
    package SomeMapGenerator {
        class TheMapGenerator implements Common.Common.services.IMapGenerator {
            + generateMap()
        }
}




@enduml